--- a/app/views/shared/_recaptcha.html
+++ b/app/views/shared/_recaptcha.html
@@ -1,10 +1,12 @@
-<div id="recaptcha_container">
-    <div id="recaptcha_image"></div>
-   <div id="recaptcha_label">
-       <label for="recaptcha_response_field">Type the two words:  </label>
-       <a href="javascript:Recaptcha.reload();">(Get New Words)</a>
-    </div>
-    <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" autocomplete="off" class="text" />
+<div id="recaptcha-outer">
+  <div id="recaptcha_container">
+      <div id="recaptcha_image"></div>
+     <div id="recaptcha_label">
+         <label for="recaptcha_response_field">Type the two words:  </label>
+         <a href="javascript:Recaptcha.reload();">(Get New Words)</a>
+      </div>
+      <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" autocomplete="off" class="text" />
+  </div>
 </div>
 
 <script type="text/javascript">
@@ -15,3 +17,4 @@ var RecaptchaOptions = {
 </script>
 
 <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdLd8QSAAAAAE9J9A7Vm_bkwK01AdMo4bGInCVv&amp;error=expression"></script>
+
