--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,5 +1,5 @@
 @import url(dbx.css);
-.pretty-button {
+.pretty-button, .pretty-button2 {
   background: #4AA54A;
   border: 1px solid #2E662E;
   border-radius: 4px;
@@ -39,12 +39,25 @@ select {
 body {
   margin: 0;
   padding: 0;
-  font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+/*font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+  color: #333;
+*/
+  color:black;
+  font-family:"Trebuchet MS";
   font-size: 12px;
-  color: #333; }
+  }
+  h9 {
+  float: left;
+  width: 700px;
+  color: #09F;
+  font-size: 14px;
+  text-align: left;
+  margin-top: 10px;
+  font-weight: normal;
+  }
 
 input[type=file] {
-  width: 250px;
+  width: 184px;
   padding: 2px;
   background: #fff; }
 
@@ -89,7 +102,7 @@ textarea {
   resize: none; }
 
 input[type=text], input[type=password] {
-  width: 695px;
+/* width: 695px; */
   margin-top: 1px;
   margin-bottom: 5px;
   margin-bottom: 10px;
@@ -211,22 +224,41 @@ p.success {
   padding-bottom: 15px; }
 
 .center-box {
+  /*
   width: 600px;
   margin: 20px auto;
   padding: 10px 20px;
   border: 1px solid #cccccc;
-  -webkit-border-radius: 4px; }
+  -webkit-border-radius: 4px;
+  */
+
+    float:left;
+    width:700px;
+    padding:15px;
+    background:-moz-linear-gradient(top, #e5f5ff 0%, #ffffff 100%);
+
+  }
   .center-box h2 {
+    /*
     border-bottom: 1px solid #cccccc;
     padding-bottom: 4px;
-    margin: 5px 0 5px 0; }
+    margin: 5px 0 5px 0;
+    */
+    float:left;
+	width:700px;
+	font-size:18px;
+	font-weight:bold;
+	text-transform:uppercase;
+	color:#000000;
+    }
   .center-box h3 {
-    margin: 5px 0 5px 0; }
+    margin: 5px 0 5px 0;
+    color: #09F;
+    font-size: 14px; }
   .center-box .content {
     padding: 10px 20px; }
   .center-box .action-bar {
     padding: 10px 12px;
-    background: #f2f2f2;
     border-top: 1px solid #cccccc; }
 
 .main-btn {
@@ -634,13 +666,50 @@ label.help {
 	box-shadow:1px 1px #d7d7d7;
 }
 
-#actual-signin-box input {
-	width: 445px;
+#actual-signin-box input[type="text"], #actual-signin-box input[type="password"] {
+	height: 30px;
+	width: 695px !important;
+}
+
+.center-box input[type="text"], .center-box input[type="password"] {
+	/* width: 445px; */
+	width: 674px;
 	height: 30px;
 }
 
-.center-box input {
-	width: 445px;
+
+.main-field input[type="text"], .main-field input[type="password"] {
+	width: 695px !important;
 	height: 30px;
+}
+
+#signup-box #recaptcha_container, #actual-signin-box #recaptcha_container {
+  float: left;
+  margin-right: 20px 10px 10px 3px; }
+  #signup-box #recaptcha_container label, #actual-signin-box #recaptcha_container label {
+    float: left; }
+
+#signup-box input[type=submit], #actual-signin-box input[type=submit] {
+  /*float: right; */
+  margin: 128px 10px 0px 40px; }
+
+.sign-up-offer{
+  margin-top: 28px;
+  padding-left: 78px;
+}
+
+#actual-signin-box input.pretty-button2 {
+  margin: 15px 0px 0px 0px !important;
+}
+
+#recaptcha-outer{
+padding: 10px 2px 10px 10px;
+margin: 10px 0px 10px 0px;
+ width: 700px;
+}
+
+#actual-signin-box input#signin_email,
+#actual-signin-box input#signin_password{
+width: 444px !important;
 }
 
